nexrad-model/tests/snapshots/fixture_snapshots__tornado_may2019_metadata.snap
---
source: nexrad-model/tests/fixture_snapshots.rs
expression: snapshot
---
coverage_pattern_number: 212
sweep_count: 3
sweeps:
  - elevation_number: 1
    radial_count: 720
    first_azimuth_degrees: 99.21753
    elevation_angle_degrees: 0.28015137
    azimuth_spacing_degrees: 0.5
    moments_present:
      - REF
      - ZDR
      - PHI
      - RHO
  - elevation_number: 2
    radial_count: 720
    first_azimuth_degrees: 119.20441
    elevation_angle_degrees: 0.43945313
    azimuth_spacing_degrees: 0.5
    moments_present:
      - REF
      - VEL
      - SW
  - elevation_number: 3
    radial_count: 720
    first_azimuth_degrees: 137.21649
    elevation_angle_degrees: 0.69763184
    azimuth_spacing_degrees: 0.5
    moments_present:
      - REF
      - ZDR
      - PHI
      - RHO
