nexrad-model/tests/snapshots/fixture_snapshots__winter_greatlakes_moment_stats.snap
---
source: nexrad-model/tests/fixture_snapshots.rs
expression: stats
---
sweep_index: 0
radial_index: 0
reflectivity:
  gate_count: 1832
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: eb0f90e236a065c9244b3055f74479a7de48e7c489d1b79964a77fb675f8c2f0
velocity: ~
spectrum_width: ~
differential_reflectivity:
  gate_count: 1192
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: 574ff492f7463661df965c7397223d1c8588020d049e0e5cbfb1caf110e35577
differential_phase:
  gate_count: 1192
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: 20a47aba742e7df4ae5aaa4fbcec65485c8b1dbea6357878ff492bfe0a1f0e31
correlation_coefficient:
  gate_count: 1192
  first_gate_range_km: 2.125
  gate_interval_km: 0.25
  data_sha256: 61a68a601d82b67fe2665432c8a3d3bd8757e15cb02094b34d5665c3aefe601b
clutter_filter_power: ~
